Docs: describe use of environment variables in the example file

--- a/src/app/local.example.env
+++ b/src/app/local.example.env
@@ -1,2 +1,12 @@
-DJANGO_DEBUG=True
-DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
+# Unique and unpredictable value used by Django's cryptography routines.
+# Use some sort of generator or just type random characters.
+# For instance: 8#ubdv*jh_1u(6m4)^s^*pdo!&y_#jz)vv%5cp%8^*&%ztttxq
+DJANGO_SECRET_KEY=
+
+# Whether the application runs in debug mode or not.
+# Set this to False in production environment
+DJANGO_DEBUG=
+
+# Database URL in the format: <db-engine>://<user>:<password>@<host>:<port>/<db-name>
+# For instance: postgres://dbuser:123456@mydb.com:5432/mydb
+DATABASE_URL=
